--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "client-sessions": "^0.8.0",
+    "cloudinary": "^1.10.0",
     "csurf": "^1.9.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
